feat: add new route for get clientCount with different filter
